updated README files

--- a/QtTriangleGLEW/CMakeLists.txt
+++ b/QtTriangleGLEW/CMakeLists.txt
@@ -17,8 +17,11 @@ set(TargetName QtTriangle)
 set(CMAKE_AUTOMOC ON)
 # find Qt libs
 find_package(Qt5 COMPONENTS Widgets OpenGL REQUIRED)
-find_package(GLEW REQUIRED)
-# use C++ 17
+find_package(OpenGL REQUIRED)
+if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR "Windows")
+	find_package(GLEW REQUIRED)
+endif()
+	# use C++ 17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
@@ -53,4 +56,7 @@ endif()
 
 
 # add exe and link libs that must be after the other defines
-target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  Qt5::Widgets Qt5::OpenGL  GLEW::GLEW)
+target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  Qt5::Widgets Qt5::OpenGL OpenGL::GL )
+if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR "Windows")
+	target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  GLEW::GLEW)
+endif()
