--- a/QtTriangleGLEW/CMakeLists.txt
+++ b/QtTriangleGLEW/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CMAKE_AUTOMOC ON)
 # find Qt libs
 find_package(Qt5 COMPONENTS Widgets OpenGL REQUIRED)
 find_package(OpenGL REQUIRED)
-if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR "Windows")
+if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME}  MATCHES "Windows")
 	find_package(GLEW REQUIRED)
 endif()
 	# use C++ 17
@@ -57,6 +57,6 @@ endif()
 
 # add exe and link libs that must be after the other defines
 target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  Qt5::Widgets Qt5::OpenGL OpenGL::GL )
-if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR "Windows")
+if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME}  MATCHES "Windows")
 	target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  GLEW::GLEW)
 endif()
