--- a/SDL2TriangleGLEW/CMakeLists.txt
+++ b/SDL2TriangleGLEW/CMakeLists.txt
@@ -48,8 +48,12 @@ endif()
 
 
 # add exe and link libs that must be after the other defines
-target_link_libraries(${TargetName} PRIVATE  SDL2::SDL2-static OpenGL::GL)
-
+target_link_libraries(${TargetName} PRIVATE   OpenGL::GL)
+target_link_libraries(${TargetName}
+        PRIVATE
+        $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
+        $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
+    )
 if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME}  MATCHES  "Windows")
 	target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  GLEW::GLEW)
 endif()
