--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,10 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     add_subdirectory(${PROJECT_SOURCE_DIR}/MacTriangle)
 endif()
 add_subdirectory(${PROJECT_SOURCE_DIR}/QtTriangleGLEW)
-add_subdirectory(${PROJECT_SOURCE_DIR}/SD2Triangle3DGLMGlew)
+add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2Triangle3DGLMGlew)
 add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2TriangleGLEW)
-#add_subdirectory(${PROJECT_SOURCE_DIR}/SFMLTriangleGLEW)
+add_subdirectory(${PROJECT_SOURCE_DIR}/SFMLTriangle)
+add_subdirectory(${PROJECT_SOURCE_DIR}/PointsGL3WSDL)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     add_subdirectory(${PROJECT_SOURCE_DIR}/WindowsTriangleGLEW)
