removed SFML demo from global build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ endif()
 add_subdirectory(${PROJECT_SOURCE_DIR}/QtTriangleGLEW)
 add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2Triangle3DGLMGlew)
 add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2TriangleGLEW)
-add_subdirectory(${PROJECT_SOURCE_DIR}/SFMLTriangle)
+# add_subdirectory(${PROJECT_SOURCE_DIR}/SFMLTriangle)
 add_subdirectory(${PROJECT_SOURCE_DIR}/PointsGL3WSDL)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
