--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2Triangle3DGLMGlew)
 add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2TriangleGLEW)
 # add_subdirectory(${PROJECT_SOURCE_DIR}/SFMLTriangle)
 add_subdirectory(${PROJECT_SOURCE_DIR}/PointsGL3WSDL)
+add_subdirectory(${PROJECT_SOURCE_DIR}/GridLines)
+add_subdirectory(${PROJECT_SOURCE_DIR}/TriangleGrid)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     add_subdirectory(${PROJECT_SOURCE_DIR}/WindowsTriangleGLEW)
