split out shader code into header for ease

--- a/SDL2Triangle3DGLMGlew/CMakeLists.txt
+++ b/SDL2Triangle3DGLMGlew/CMakeLists.txt
@@ -18,9 +18,7 @@ find_package(SDL2 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
 find_package(OpenGL REQUIRED)
-if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME}  MATCHES  "Windows")
-	find_package(GLEW REQUIRED)
-endif()
+find_package(GLEW REQUIRED)
 	# use C++ 17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -54,7 +52,4 @@ endif()
 # add exe and link libs that must be after the other defines
 target_link_libraries(${TargetName} PRIVATE  SDL2::SDL2-static OpenGL::GL)
 
-if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME}  MATCHES  "Windows")
-	target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}
-        GLEW::GLEW glm::glm)
-endif()
+target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS} GLEW::GLEW glm::glm)
