--- a/SDL2TriangleGLEW/CMakeLists.txt
+++ b/SDL2TriangleGLEW/CMakeLists.txt
@@ -16,9 +16,7 @@ set(TargetName SDL2TriangleGLEW)
 # find Qt libs
 find_package(SDL2 CONFIG REQUIRED)
 find_package(OpenGL REQUIRED)
-if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME}  MATCHES  "Windows")
-	find_package(GLEW REQUIRED)
-endif()
+find_package(GLEW REQUIRED)
 	# use C++ 17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -48,12 +46,6 @@ endif()
 
 
 # add exe and link libs that must be after the other defines
-target_link_libraries(${TargetName} PRIVATE   OpenGL::GL)
-target_link_libraries(${TargetName}
-        PRIVATE
-        $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
-        $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
-    )
-if(${CMAKE_SYSTEM_NAME}  MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME}  MATCHES  "Windows")
-	target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  GLEW::GLEW)
-endif()
+target_link_libraries(${TargetName} PRIVATE  SDL2::SDL2-static OpenGL::GL)
+
+target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS}  GLEW::GLEW)
