initial commit of shaded grid demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/PointsGL3WSDL)
 add_subdirectory(${PROJECT_SOURCE_DIR}/GridLines)
 add_subdirectory(${PROJECT_SOURCE_DIR}/TriangleGrid)
 add_subdirectory(${PROJECT_SOURCE_DIR}/MapBuffer)
+add_subdirectory(${PROJECT_SOURCE_DIR}/ShadedGrid)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     add_subdirectory(${PROJECT_SOURCE_DIR}/WindowsTriangleGLEW)
